--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-logging.level.ru.yandex.practicum=debug 
+logging.level.ru.yandex.practicum=debug
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.sql.init.mode=always
